--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 omegaconf==2.0.4
 hydra_core==1.0.3
-git+https://github.com/PytorchLightning/pytorch-lightning.git@release/1.2-dev
+git+https://github.com/PytorchLightning/pytorch-lightning.git
 torch==1.7.0
